fix: modal scrollbar accessibility on Windows (#346)

--- a/src/components/modal/content/US/styles/main.scss
+++ b/src/components/modal/content/US/styles/main.scss
@@ -4,6 +4,10 @@
     margin: auto;
     border-radius: 10px;
     height: 100%;
+    // Important: This forces the wrapper to be the entire width of the screen
+    // which is needed in Windows due to the scroll bar offset hack used
+    // on the topmost parent container
+    width: 100vw;
 }
 
 .content {
